-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 8u371, 11, 12, 13, 14
-
Component/s: hotspot
-
b04
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8228793 | 13.0.2 | Thomas Stuefe | P4 | Resolved | Fixed | b01 |
| JDK-8229067 | 13.0.1 | Thomas Stuefe | P4 | Resolved | Fixed | b05 |
| JDK-8228362 | 13 | Thomas Stuefe | P4 | Resolved | Fixed | b31 |
| JDK-8232111 | 11.0.6-oracle | Harold Seigel | P4 | Resolved | Fixed | b01 |
| JDK-8228968 | 11.0.5 | Thomas Stuefe | P4 | Resolved | Fixed | b02 |
| JDK-8313662 | 8u401 | Daniel Skantz | P4 | Resolved | Fixed | b01 |
metaspace.cpp:
static void test_virtual_space_list_large_chunk() {
....
vs_list->get_new_chunk(large_size, 0);
}
That chunk then is leaked.
Within RunUnitTestsConcurrently.java, this function is called in a tight loop by 30 threads concurrently for 15 seconds. Depending on how fast the machine is, this will usually eat up 10-20GB, often causing the process being OOM killed.
This is probably also the cause for
- backported by
-
JDK-8228362 runtime/memory/RunUnitTestsConcurrently.java has a memory leak
-
- Resolved
-
-
JDK-8228793 runtime/memory/RunUnitTestsConcurrently.java has a memory leak
-
- Resolved
-
-
JDK-8228968 runtime/memory/RunUnitTestsConcurrently.java has a memory leak
-
- Resolved
-
-
JDK-8229067 runtime/memory/RunUnitTestsConcurrently.java has a memory leak
-
- Resolved
-
-
JDK-8232111 runtime/memory/RunUnitTestsConcurrently.java has a memory leak
-
- Resolved
-
-
JDK-8313662 runtime/memory/RunUnitTestsConcurrently.java has a memory leak
-
- Resolved
-
- duplicates
-
JDK-8225200 assert(vs.actual_committed_size() >= commit_size) failed
-
- Closed
-
- relates to
-
JDK-8213269 convert test/hotspot/jtreg/runtime/memory/RunUnitTestsConcurrently to gtest
-
- Resolved
-