8227041: runtime/memory/RunUnitTestsConcurrently.java has a memory leak Reviewed-by: stefank, coleenp